# Series-Dashboard

./: .gitignore  CMakeLists.txt  Cargo.toml  Readme.md  Series-Dashboard.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  series-dashboard.desktop
src/: AddNewWindow.cpp  AddNewWindow.h  ApiData.cpp  ApiData.h  Apidata.cpp  Apidata.h  Config.cpp  Config.h  Dashboard.cpp  Dashboard.h  Entry.cpp  Entry.h  FileBrowserDialog.cpp  FileBrowserDialog.h  PreferencesWindow.cpp  PreferencesWindow.h  SeriesDashboard.cpp  SeriesDashboard.h  SeriesEntry.cpp  SeriesEntry.h  main.cpp  main.rs  seriesDashboard.cpp  seriesDashboard.h
ui/: Dashboard.glade  Dashboard.glade~  Series.glade
