[package]
name = "series_dashboard"
version = "0.1.0"
authors = ["Dave12311 <horvath.david987@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.17.5"
tui = { version = "0.9.5", default-features = false, features = ['crossterm'] }
